# iam-capable

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  tag.yml  test.yml
auto/: tag-version.sh
src/: capability.rs  cli.rs  compare.rs  main.rs  policy.rs
src/aws/: client.rs  iam.rs  mod.rs  policy.rs
src/output/: csv.rs  format.rs  json.rs  mod.rs
