[package]
name = "iam-capable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-iam = "0.24.0"
aws-sdk-sts = "0.24.0"
aws-types = "0.54.1"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "2.2"
csv = "1.1"

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
